# rustdex

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: api.rs  cli.rs  display.rs  main.rs  models.rs
