[package]
name = "rustdex"
version = "0.1.0"
edition = "2024"
description = "A terminal-based Pokédex written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pedrobrantes/rustdex"
readme = "README.md"
keywords = ["pokemon", "pokedex", "cli", "tui", "rust", "rustdex", "pokeapi", "api", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
viuer = "0.6.1"
image = "0.24.7"
clearscreen = "2.0.1"
